# NodeSignal-Messenger

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  nodesignal_tester.sh
build-win/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  install_manifest.txt
build-win/assets/: client.ui  style.css
build-win2/: CMakeCache.txt
client/: client.c  client.h  client.ui  style.css
comm/: comm.c  comm.h
database/: db.c  db.h  messages.db  schema.sql
server/: server.c  server.h
tests/: test_comm.c  test_db.c  test_db_extended.c  test_integration.c  test_main.c  test_packet.c
